tests/ui/zero-contracts.rs
#[contracts::contracts]
fn f() {}

fn main() {}
